[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "nemophoto"
dynamic = ["version"]
description = "Absorption, fluorescence, phosphorescence spectrum simulations and ISC rate calculations."
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [{ name = "Leonardo Evaristo de Sousa", email = "ledso@dtu.dk" }]
urls = { Homepage = "https://github.com/LeonardoESousa/NEMO" }

# Keep pandas <2.0 and NumPy <2.0 (works well on Python 3.8–3.11)
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "LeoX>=0.9.0"
]

[project.scripts]
nemo = "nemo.__main__:main"
nemo_batch_run = "nemo.batch:run_batch"
nemo_tuning = "nemo.omega:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["nemo*"]
exclude = ["tests", "*.tests", "*.tests.*", "tests.*"]

[tool.setuptools.dynamic]
version = { attr = "nemo.__version__.__version__" }
